--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ header{
 
 .ff{
     bordeius: 40px;
-    display: flex;r: solid black 1px;
-    border-rad
+    display: flex;
+    border-radius: solid black 1px;
 }
 
 .ff1{
